# python-sdk

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build-wheels.sh  build.py  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/env/: env.yml
.github/actions/setup_environment/: action.yml
.github/workflows/: build_wheels.yml  docs.yml  examples.yml  modalic.yml  unit-tests.yml  wheels.yml
docs/: Makefile  replace.py
docs/source/: concepts.rst  conf.py  getting-started.rst  index.rst  installation.rst  modalic.client.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html
docs/source/sdk/: index.rst  modalic.client.proto.rst  modalic.client.rst  modalic.client.utils.rst  modalic.config.rst  modalic.data.rst  modalic.logging.rst  modalic.rst  modalic.server.rst  modalic.simulation.rst  modalic.utils.rst  modules.rst
docs/source/tutorials-and-examples/: index.rst  pytorch-nlp-func.rst  quickstart-pytorch.rst  quickstart-tf.rst
examples/: README.md
examples/pytorch_mnist/: README.md  client.py  data.py  pyproject.toml  setup.py
examples/pytorch_mnist/data/: README.md
examples/pytorch_nlp_func/: README.md  client.py
examples/tensorflow_cifar10/: client.py
examples/tf_quickstart/: README.md  client.py  config.toml  server.py
modalic/: __init__.py  run.py  spawn.py
modalic/api/common/: client.py  communication.py
modalic/api/tf/: tf_client.py
modalic/api/torch/: pytorch_client.py  torch_func.py
modalic/client/: __init__.py  client.py  grpc_client.py  internal_client.py  pytorch_client.py  tensorflow_client.py  tf_client.py  trainer.py
modalic/client/proto/: mosaic_pb2.py  mosaic_pb2_grpc.py
modalic/client/utils/: communication.py  decor.py  tf_utils.py  torch_utils.py
modalic/config/: config.py
modalic/data/: misc.py
modalic/logging/: logger.py  logging.py  monitor.py
modalic/proto/: mosaic.proto
modalic/server/: api.py  server.py
modalic/simulation/: cthreading.py  pool.py
modalic/storage/: __init__.py  store.py
modalic/utils/: common.py  misc.py  protocol.py  serde.py  shared.py
scripts/: build_openssl.sh  generate-docs.sh  install_dependencies.sh  linting.sh  testing.sh  unit_testing.sh
tests/: conftest.py  test_serde.py
tests/client/: test_communication.py
tests/config/: test_config.py
tests/unit/: conftest.py
tests/unit/client/: test_tf_utils.py  test_torch_utils.py
tests/unit/config/: test_config.py
tests/unit/utils/: test_serde.py
tests/utils/: test_serde.py
tools/: env.py  prebuild.py
