[tool.poetry]
name="modalic"
packages = [
    { include = "modalic" },
]
description="Python SDK library for using the modalic MLOps platform."
version = "0.1.0"
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
readme = "README.md"
homepage = "https://modalic.ai"
documentation = "https://docs.modalic.ai"
repository = "https://github.com/modalic/python-sdk"
license = "Apache-2.0"
keywords = [
    "python", "federated learning", "machine learning", "sdk", "MLOps",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs",
    "legacy",
    "examples"
]
include = [
    "modalic",
    "*.txt",
    "*.md",
    "*.sh"
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.12"
grpcio = ">=1.43.0"
grpcio-tools = ">=1.43.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.24.3"
black = "^22.3.0"
mypy = "^0.950"
isort = "^5.10.1"
types-protobuf = "^3.19.18"
autoflake = "^1.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
name = "modalic"
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = true
envlist = py36,py37,py38,py39
[testenv]
whitelist_externals = poetry
commands =
    poetry install -v --extras all
    poetry run pytest tests
    poetry run bash scripts/mypy.sh --install-types
"""

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39"]
exclude = '''
  modalic/client/proto/
  /(
      \.eggs/
    | \.git/
    | \.tox/
    | \.venv/
    | _build/
    | build/
    | dist/
    | venv/
  )
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = ['modalic/client/proto/', 'modalic/utils/protocol.py']
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = "grpc.*"
follow_imports = "skip"
follow_imports_for_stubs = true
