[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.tox]
name = "modalic"
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = true
envlist = py38,py39
"""

[tool.black]
line-length = 88
target-version = ["py38", "py39"]
exclude = '''
  modalic/client/proto/
  /(
      \.eggs/
    | \.git/
    | \.tox/
    | \.venv/
    | _build/
    | build/
    | dist/
    | venv/
  )
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = ["modalic/client/proto/", "modalic/utils/protocol.py"]
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = "grpc.*"
follow_imports = "skip"
follow_imports_for_stubs = true
