[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.tox]
name = "modalic"
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = true
envlist = py38,py39
"""

[tool.black]
line-length = 88
target-version = ["py38", "py39"]
exclude = '''
  modalic/client/proto/
  /(
      \.eggs/
    | \.git/
    | \.tox/
    | \.venv/
    | _build/
    | build/
    | dist/
    | venv/
  )
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = ["modalic/client/proto/", "modalic/utils/protocol.py"]
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = "grpc.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*"]
skip = ["*-win32", "*-musllinux_i686", "*-i686-unknown-linux-musl"]
environment = { PATH="$HOME/.cargo/bin:$PATH" }
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
before-all = "pip install --upgrade pip && pip install -U setuptools && pip install -U setuptools-rust"

[tool.cibuildwheel.linux]
before-all = [
  "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=nightly --profile=minimal -y",
  "rustup component add rustfmt",
  "chmod +x scripts/build_openssl.sh && ./scripts/build_openssl.sh",
  "chmod +x scripts/install_dependencies.sh",
  "./scripts/install_dependencies.sh",
]

[tool.cibuildwheel.macos]
before-all = [
  "pip install -U setuptools-rust",
  "rustup component add rustfmt",
]
