[metadata]
name = modalic
version = 0.1.0
description="Python SDK library for using the Modalic Federated Learning Operations Platform."
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
readme = "README.md"
homepage = "https://modalic.ai"
documentation = "https://docs.modalic.ai"
repository = "https://github.com/modalic/python-sdk"
license = "Apache-2.0"
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    "python"
    "Federated Learning"
    "Machine Learning"
    "SDK"
    "MLOps"
classifiers =
    Development Status :: 3- Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: System :: Distributed Computing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = False
setup_requires =
  grpcio  >=1.43.0
  grpcio-tools >=1.43.0
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
  *.tests,
  tests.*,
  tests,
  docs,
  examples
